# cloudparse

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/cloudparse/: concrete_parses.hpp  inteface_parser.hpp  parser.hpp
src/: parser.cpp
tests/: CMakeLists.txt  test_concrete_parses.cpp  test_parser.cpp
